tests/c_headers/net_if.h


struct net_if_addr {
	struct net_addr address;
#if defined(CONFIG_NET_NATIVE_IPV6)
	struct net_timeout lifetime;
#endif
#if defined(CONFIG_NET_IPV6_DAD) && defined(CONFIG_NET_NATIVE_IPV6)
	sys_snode_t dad_node;
	uint32_t dad_start;
#endif
	enum net_addr_type addr_type;
	enum net_addr_state addr_state;
#if defined(CONFIG_NET_IPV6_DAD) && defined(CONFIG_NET_NATIVE_IPV6)
	uint8_t dad_count;
#endif
	uint8_t is_infinite : 1;
	uint8_t is_used : 1;
	uint8_t is_mesh_local : 1;
	uint8_t _unused : 5;
};
struct net_if_mcast_addr {
	struct net_addr address;
	uint8_t is_used : 1;
	uint8_t is_joined : 1;
	uint8_t _unused : 6;
};
struct net_if_ipv6_prefix {
	struct net_timeout lifetime;
	struct in6_addr prefix;
	struct net_if *iface;
	uint8_t len;
	uint8_t is_infinite : 1;
	uint8_t is_used : 1;
	uint8_t _unused : 6;
};
struct net_if_router {
	sys_snode_t node;
	struct net_addr address;
	struct net_if *iface;
	uint32_t life_start;
	uint16_t lifetime;
	uint8_t is_used : 1;
	uint8_t is_default : 1;
	uint8_t is_infinite : 1;
	uint8_t _unused : 5;
};
struct net_if_ipv6 {
	struct net_if_addr unicast[NET_IF_MAX_IPV6_ADDR];
	struct net_if_mcast_addr mcast[NET_IF_MAX_IPV6_MADDR];
	struct net_if_ipv6_prefix prefix[NET_IF_MAX_IPV6_PREFIX];
	uint32_t base_reachable_time;
	uint32_t reachable_time;
	uint32_t retrans_timer;
#if defined(CONFIG_NET_IPV6_ND) && defined(CONFIG_NET_NATIVE_IPV6)
	sys_snode_t rs_node;
	uint32_t rs_start;
	uint8_t rs_count;
#endif
	uint8_t hop_limit;
};
struct net_if_config {
	struct net_if_ip ip;
#if defined(CONFIG_NET_DHCPV4) && defined(CONFIG_NET_NATIVE_IPV4)
	struct net_if_dhcpv4 dhcpv4;
#endif 
#if defined(CONFIG_NET_IPV4_AUTO) && defined(CONFIG_NET_NATIVE_IPV4)
	struct net_if_ipv4_autoconf ipv4auto;
#endif 
#if defined(CONFIG_NET_L2_VIRTUAL)
	sys_slist_t virtual_interfaces;
#endif 
};
struct net_if_dev {
	const struct device *dev;
	const struct net_l2 * const l2;
	void *l2_data;
	struct net_linkaddr link_addr;
#if defined(CONFIG_NET_OFFLOAD)
	struct net_offload *offload;
#endif 
	uint16_t mtu;
#if defined(CONFIG_NET_SOCKETS_OFFLOAD)
	bool offloaded;
#endif 
};
struct net_if {
	struct net_if_dev *if_dev;
#if defined(CONFIG_NET_STATISTICS_PER_INTERFACE)
	struct net_stats stats;
#endif 
	struct net_if_config config;
#if defined(CONFIG_NET_POWER_MANAGEMENT)
	int tx_pending;
#endif
};
int net_if_config_ipv6_get(struct net_if *iface,
			   struct net_if_ipv6 **ipv6);
int net_if_config_ipv6_put(struct net_if *iface);
struct net_if_addr *net_if_ipv6_addr_lookup(const struct in6_addr *addr,
					    struct net_if **iface);
struct net_if_addr *net_if_ipv6_addr_lookup_by_iface(struct net_if *iface,
						     struct in6_addr *addr);
__syscall int net_if_ipv6_addr_lookup_by_index(const struct in6_addr *addr);
struct net_if_addr *net_if_ipv6_addr_add(struct net_if *iface,
					 struct in6_addr *addr,
					 enum net_addr_type addr_type,
					 uint32_t vlifetime);
__syscall bool net_if_ipv6_addr_add_by_index(int index,
					     struct in6_addr *addr,
					     enum net_addr_type addr_type,
					     uint32_t vlifetime);
void net_if_ipv6_addr_update_lifetime(struct net_if_addr *ifaddr,
				      uint32_t vlifetime);
bool net_if_ipv6_addr_rm(struct net_if *iface, const struct in6_addr *addr);
__syscall bool net_if_ipv6_addr_rm_by_index(int index,
					    const struct in6_addr *addr);
struct net_if_mcast_addr *net_if_ipv6_maddr_add(struct net_if *iface,
						const struct in6_addr *addr);
bool net_if_ipv6_maddr_rm(struct net_if *iface, const struct in6_addr *addr);
struct net_if_mcast_addr *net_if_ipv6_maddr_lookup(const struct in6_addr *addr,
						   struct net_if **iface);
typedef void (*net_if_mcast_callback_t)(struct net_if *iface,
					const struct in6_addr *addr,
					bool is_joined);
struct net_if_mcast_monitor {
	sys_snode_t node;
	struct net_if *iface;
	net_if_mcast_callback_t cb;
};
void net_if_mcast_mon_register(struct net_if_mcast_monitor *mon,
			       struct net_if *iface,
			       net_if_mcast_callback_t cb);
void net_if_mcast_mon_unregister(struct net_if_mcast_monitor *mon);
void net_if_mcast_monitor(struct net_if *iface, const struct in6_addr *addr,
			  bool is_joined);
void net_if_ipv6_maddr_join(struct net_if_mcast_addr *addr);
static inline bool net_if_ipv6_maddr_is_joined(struct net_if_mcast_addr *addr)
{
	NET_ASSERT(addr);
	return addr->is_joined;
}
void net_if_ipv6_maddr_leave(struct net_if_mcast_addr *addr);
struct net_if_ipv6_prefix *net_if_ipv6_prefix_get(struct net_if *iface,
						  struct in6_addr *addr);
struct net_if_ipv6_prefix *net_if_ipv6_prefix_lookup(struct net_if *iface,
						     struct in6_addr *addr,
						     uint8_t len);
struct net_if_ipv6_prefix *net_if_ipv6_prefix_add(struct net_if *iface,
						  struct in6_addr *prefix,
						  uint8_t len,
						  uint32_t lifetime);
bool net_if_ipv6_prefix_rm(struct net_if *iface, struct in6_addr *addr,
			   uint8_t len);
static inline void net_if_ipv6_prefix_set_lf(struct net_if_ipv6_prefix *prefix,
					     bool is_infinite)
{
	prefix->is_infinite = is_infinite;
}
void net_if_ipv6_prefix_set_timer(struct net_if_ipv6_prefix *prefix,
				  uint32_t lifetime);
void net_if_ipv6_prefix_unset_timer(struct net_if_ipv6_prefix *prefix);
bool net_if_ipv6_addr_onlink(struct net_if **iface, struct in6_addr *addr);
static inline struct in6_addr *net_if_router_ipv6(struct net_if_router *router)
{
	return &router->address.in6_addr;
}
static inline struct in6_addr *net_if_router_ipv6(struct net_if_router *router)
{
	static struct in6_addr addr;
	ARG_UNUSED(router);
	return &addr;
}
struct net_if_router *net_if_ipv6_router_lookup(struct net_if *iface,
						struct in6_addr *addr);
struct net_if_router *net_if_ipv6_router_find_default(struct net_if *iface,
						      struct in6_addr *addr);
void net_if_ipv6_router_update_lifetime(struct net_if_router *router,
					uint16_t lifetime);