src/zephyr_c/net/znet_if.nim


proc net_if_config_ipv6_get*(iface: ptr net_if; ipv6: ptr ptr net_if_ipv6): cint {.
    importc: "net_if_config_ipv6_get", header: hdr.}



## *
##  @brief Release network interface IPv6 config.
##
##  @param iface Interface to use.
##
##  @return 0 if ok, <0 if error
##

proc net_if_config_ipv6_put*(iface: ptr net_if): cint {.
    importc: "net_if_config_ipv6_put", header: hdr.}



## *
##  @brief Check if this IPv6 address belongs to one of the interfaces.
##
##  @param addr IPv6 address
##  @param iface Pointer to interface is returned
##
##  @return Pointer to interface address, NULL if not found.
##

proc net_if_ipv6_addr_lookup*(caddr: ptr In6Addr; iface: ptr ptr net_if): ptr net_if_addr {.
    importc: "net_if_ipv6_addr_lookup", header: hdr.}



## *
##  @brief Check if this IPv6 address belongs to this specific interfaces.
##
##  @param iface Network interface
##  @param addr IPv6 address
##
##  @return Pointer to interface address, NULL if not found.
##

proc net_if_ipv6_addr_lookup_by_iface*(iface: ptr net_if; caddr: ptr In6Addr): ptr net_if_addr {.
    importc: "net_if_ipv6_addr_lookup_by_iface", header: hdr.}



## *
##  @brief Check if this IPv6 address belongs to one of the interface indices.
##
##  @param addr IPv6 address
##
##  @return >0 if address was found in given network interface index,
##  all other values mean address was not found
##

proc net_if_ipv6_addr_lookup_by_index*(caddr: ptr In6Addr): cint {.
    importc: "net_if_ipv6_addr_lookup_by_index", header: hdr.}



## *
##  @brief Add a IPv6 address to an interface
##
##  @param iface Network interface
##  @param addr IPv6 address
##  @param addr_type IPv6 address type
##  @param vlifetime Validity time for this address
##
##  @return Pointer to interface address, NULL if cannot be added
##

proc net_if_ipv6_addr_add*(iface: ptr net_if; caddr: ptr In6Addr;
                          addr_type: net_addr_type; vlifetime: uint32): ptr net_if_addr {.
    importc: "net_if_ipv6_addr_add", header: hdr.}



## *
##  @brief Add a IPv6 address to an interface by index
##
##  @param index Network interface index
##  @param addr IPv6 address
##  @param addr_type IPv6 address type
##  @param vlifetime Validity time for this address
##
##  @return True if ok, false if address could not be added
##

proc net_if_ipv6_addr_add_by_index*(index: cint; caddr: ptr In6Addr;
                                   addr_type: net_addr_type; vlifetime: uint32): bool {.
    syscall, importc: "net_if_ipv6_addr_add_by_index", header: hdr.}


## *
##  @brief Update validity lifetime time of an IPv6 address.
##
##  @param ifaddr Network IPv6 address
##  @param vlifetime Validity time for this address
##

proc net_if_ipv6_addr_update_lifetime*(ifaddr: ptr net_if_addr; vlifetime: uint32) {.
    importc: "net_if_ipv6_addr_update_lifetime", header: hdr.}


## *
##  @brief Remove an IPv6 address from an interface
##
##  @param iface Network interface
##  @param addr IPv6 address
##
##  @return True if successfully removed, false otherwise
##

proc net_if_ipv6_addr_rm*(iface: ptr net_if; caddr: ptr In6Addr): bool {.
    importc: "net_if_ipv6_addr_rm", header: hdr.}


## *
##  @brief Remove an IPv6 address from an interface by index
##
##  @param index Network interface index
##  @param addr IPv6 address
##
##  @return True if successfully removed, false otherwise
##

proc net_if_ipv6_addr_rm_by_index*(index: cint; caddr: ptr In6Addr): bool {.syscall,
    importc: "net_if_ipv6_addr_rm_by_index", header: hdr.}


## *
##  @brief Add a IPv6 multicast address to an interface
##
##  @param iface Network interface
##  @param addr IPv6 multicast address
##
##  @return Pointer to interface multicast address, NULL if cannot be added
##

proc net_if_ipv6_maddr_add*(iface: ptr net_if; caddr: ptr In6Addr): ptr net_if_mcast_addr {.
    importc: "net_if_ipv6_maddr_add", header: hdr.}


## *
##  @brief Remove an IPv6 multicast address from an interface
##
##  @param iface Network interface
##  @param addr IPv6 multicast address
##
##  @return True if successfully removed, false otherwise
##

proc net_if_ipv6_maddr_rm*(iface: ptr net_if; caddr: ptr In6Addr): bool {.
    importc: "net_if_ipv6_maddr_rm", header: hdr.}


## *
##  @brief Check if this IPv6 multicast address belongs to a specific interface
##  or one of the interfaces.
##
##  @param addr IPv6 address
##  @param iface If *iface is null, then pointer to interface is returned,
##  otherwise the *iface value needs to be matched.
##
##  @return Pointer to interface multicast address, NULL if not found.
##

proc net_if_ipv6_maddr_lookup*(caddr: ptr In6Addr; iface: ptr ptr net_if): ptr net_if_mcast_addr {.
    importc: "net_if_ipv6_maddr_lookup", header: hdr.}


## *
##  @typedef net_if_mcast_callback_t
##
##  @brief Define callback that is called whenever IPv6 multicast address group
##  is joined or left.
##
##  @param iface A pointer to a struct net_if to which the multicast address is
##         attached.
##  @param addr IPv6 multicast address.
##  @param is_joined True if the address is joined, false if left.
##

type
  net_if_mcast_callback_t* = proc (iface: ptr net_if; caddr: ptr In6Addr;
                                is_joined: bool)



## *
##  @brief Multicast monitor handler struct.
##
##  Stores the multicast callback information. Caller must make sure that
##  the variable pointed by this is valid during the lifetime of
##  registration. Typically this means that the variable cannot be
##  allocated from stack.
##

type
  net_if_mcast_monitor* {.importc: "net_if_mcast_monitor", header: hdr, bycopy.} = object
    node* {.importc: "node".}: sys_snode_t ## * Node information for the slist.
    iface* {.importc: "iface".}: ptr net_if_alias ## * Network interface
    cb* {.importc: "cb".}: net_if_mcast_callback_t ## * Multicast callback


## *
##  @brief Register a multicast monitor
##
##  @param mon Monitor handle. This is a pointer to a monitor storage structure
##  which should be allocated by caller, but does not need to be initialized.
##  @param iface Network interface
##  @param cb Monitor callback
##

proc net_if_mcast_mon_register*(mon: ptr net_if_mcast_monitor; iface: ptr net_if;
                               cb: net_if_mcast_callback_t) {.
    importc: "net_if_mcast_mon_register", header: hdr.}


## *
##  @brief Unregister a multicast monitor
##
##  @param mon Monitor handle
##

proc net_if_mcast_mon_unregister*(mon: ptr net_if_mcast_monitor) {.
    importc: "net_if_mcast_mon_unregister", header: hdr.}


## *
##  @brief Call registered multicast monitors
##
##  @param iface Network interface
##  @param addr Multicast address
##  @param is_joined Is this multicast address joined (true) or not (false)
##

proc net_if_mcast_monitor_check*(iface: ptr net_if_alias; caddr: ptr In6Addr; is_joined: bool) {.
    importc: "net_if_mcast_monitor", header: hdr.}


## *
##  @brief Mark a given multicast address to be joined.
##
##  @param addr IPv6 multicast address
##

proc net_if_ipv6_maddr_join*(caddr: ptr net_if_mcast_addr) {.
    importc: "net_if_ipv6_maddr_join", header: hdr.}


## *
##  @brief Check if given multicast address is joined or not.
##
##  @param addr IPv6 multicast address
##
##  @return True if address is joined, False otherwise.
##

proc net_if_ipv6_maddr_is_joined*(caddr: ptr net_if_mcast_addr): bool {.importc: "$1", header: hdr.}


## *
##  @brief Mark a given multicast address to be left.
##
##  @param addr IPv6 multicast address
##

proc net_if_ipv6_maddr_leave*(caddr: ptr net_if_mcast_addr) {.
    importc: "net_if_ipv6_maddr_leave", header: hdr.}


## *
##  @brief Return prefix that corresponds to this IPv6 address.
##
##  @param iface Network interface
##  @param addr IPv6 address
##
##  @return Pointer to prefix, NULL if not found.
##

proc net_if_ipv6_prefix_get*(iface: ptr net_if; caddr: ptr In6Addr): ptr net_if_ipv6_prefix {.
    importc: "net_if_ipv6_prefix_get", header: hdr.}


## *
##  @brief Check if this IPv6 prefix belongs to this interface
##
##  @param iface Network interface
##  @param addr IPv6 address
##  @param len Prefix length
##
##  @return Pointer to prefix, NULL if not found.
##

proc net_if_ipv6_prefix_lookup*(iface: ptr net_if; caddr: ptr In6Addr; len: uint8): ptr net_if_ipv6_prefix {.
    importc: "net_if_ipv6_prefix_lookup", header: hdr.}


## *
##  @brief Add a IPv6 prefix to an network interface.
##
##  @param iface Network interface
##  @param prefix IPv6 address
##  @param len Prefix length
##  @param lifetime Prefix lifetime in seconds
##
##  @return Pointer to prefix, NULL if the prefix was not added.
##

proc net_if_ipv6_prefix_add*(iface: ptr net_if; prefix: ptr In6Addr; len: uint8;
                            lifetime: uint32): ptr net_if_ipv6_prefix {.
    importc: "net_if_ipv6_prefix_add", header: hdr.}


## *
##  @brief Remove an IPv6 prefix from an interface
##
##  @param iface Network interface
##  @param addr IPv6 prefix address
##  @param len Prefix length
##
##  @return True if successfully removed, false otherwise
##

proc net_if_ipv6_prefix_rm*(iface: ptr net_if; caddr: ptr In6Addr; len: uint8): bool {.
    importc: "net_if_ipv6_prefix_rm", header: hdr.}


## *
##  @brief Set the infinite status of the prefix
##
##  @param prefix IPv6 address
##  @param is_infinite Infinite status
##

proc net_if_ipv6_prefix_set_lf*(prefix: ptr net_if_ipv6_prefix; is_infinite: bool) {.importc: "$1", header: hdr.}



## *
##  @brief Set the prefix lifetime timer.
##
##  @param prefix IPv6 address
##  @param lifetime Prefix lifetime in seconds
##

proc net_if_ipv6_prefix_set_timer*(prefix: ptr net_if_ipv6_prefix; lifetime: uint32) {.
    importc: "net_if_ipv6_prefix_set_timer", header: hdr.}


## *
##  @brief Unset the prefix lifetime timer.
##
##  @param prefix IPv6 address
##

proc net_if_ipv6_prefix_unset_timer*(prefix: ptr net_if_ipv6_prefix) {.
    importc: "net_if_ipv6_prefix_unset_timer", header: hdr.}


## *
##  @brief Check if this IPv6 address is part of the subnet of our
##  network interface.
##
##  @param iface Network interface. This is returned to the caller.
##  The iface can be NULL in which case we check all the interfaces.
##  @param addr IPv6 address
##
##  @return True if address is part of our subnet, false otherwise
##

proc net_if_ipv6_addr_onlink*(iface: ptr ptr net_if; caddr: ptr In6Addr): bool {.
    importc: "net_if_ipv6_addr_onlink", header: hdr.}


## *
##  @brief Get the IPv6 address of the given router
##  @param router a network router
##
##  @return pointer to the IPv6 address, or NULL if none
##

proc net_if_router_ipv6*(router: ptr net_if_router): ptr In6Addr {.importc: "$1", header: hdr.}



## *
##  @brief Check if IPv6 address is one of the routers configured
##  in the system.
##
##  @param iface Network interface
##  @param addr IPv6 address
##
##  @return Pointer to router information, NULL if cannot be found
##

proc net_if_ipv6_router_lookup*(iface: ptr net_if; caddr: ptr In6Addr): ptr net_if_router {.
    importc: "net_if_ipv6_router_lookup", header: hdr.}


## *
##  @brief Find default router for this IPv6 address.
##
##  @param iface Network interface. This can be NULL in which case we
##  go through all the network interfaces to find a suitable router.
##  @param addr IPv6 address
##
##  @return Pointer to router information, NULL if cannot be found
##

proc net_if_ipv6_router_find_default*(iface: ptr net_if; caddr: ptr In6Addr): ptr net_if_router {.
    importc: "net_if_ipv6_router_find_default", header: hdr.}


## *
##  @brief Update validity lifetime time of a router.
##
##  @param router Network IPv6 address
##  @param lifetime Lifetime of this router.
##

proc net_if_ipv6_router_update_lifetime*(router: ptr net_if_router; lifetime: uint16) {.
    importc: "net_if_ipv6_router_update_lifetime", header: hdr.}

